tests/integration/fail/file_read_not_found.kr
# Attempt to read non-existent file
# Expected: Runtime error about file not found

set content to call read_file with "nonexistent_file_12345.txt"
print content

